<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tadje.myapplication.ui.HolidayFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/fragment_container_add"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/selected"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <Spinner
            android:id="@+id/spinnerHolidays"
            android:layout_width="174dp"
            android:layout_height="36dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPaleVioltRed"
            android:entries="@android:drawable/ic_menu_myplaces"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="36dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/addholiday"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.354"
            app:layout_constraintStart_toEndOf="@+id/addHolidayButton"
            app:layout_constraintTop_toBottomOf="@+id/recyclerviewHolidays"
            app:layout_constraintVertical_bias="0.597" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerviewHolidays"
            android:layout_width="347dp"
            android:layout_height="333dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerHolidays"
            app:layout_constraintVertical_bias="0.113" />

        <Button
            android:id="@+id/addHolidayButton"
            android:layout_width="30dp"
            android:layout_height="28dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/buttonshape"
            android:text="+"
            android:textColor="@color/colorwhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerviewHolidays"
            app:layout_constraintVertical_bias="0.0" />

        <ToggleButton
            android:id="@+id/tB_Database_Files"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="ToggleButton"
            android:textOff="@string/database"
            android:textOn="@string/files"
            app:layout_constraintEnd_toStartOf="@+id/spinnerHolidays"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>