...
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/paleVioletRedLigth"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                tools:layout_editor_absoluteX="225dp"
                tools:layout_editor_absoluteY="0dp" />

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/deleteFAB"
        android:layout_width="43dp"
        android:layout_height="46dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="72dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
...
